--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Data Pribadi
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,53 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Data Pribadi</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <div class="ion-margin">
+    <ion-row>
+      <ion-col size="2">
+        <ion-label>Nama</ion-label>
+      </ion-col>
+      <div class="ion-text-start">
+      <ion-col size="2">
+        <ion-label>: Lim,Bryan Fidel Limando</ion-label>
+      </ion-col>
+    </div>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
+        <ion-label>NRP</ion-label>
+      </ion-col>
+      <div class="ion-text-start">
+      <ion-col size="2">
+        <ion-label>: C14180168</ion-label>
+      </ion-col>
+    </div>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
+        <ion-label>Email</ion-label>
+      </ion-col>
+      <div class="ion-text-start">
+      <ion-col size="2">
+        <ion-label>: c14180168@john.petra.ac.id</ion-label>
+      </ion-col>
+    </div>
+    </ion-row>
+    <ion-row>
+      <ion-col size="2">
+        <ion-label>No. Hp</ion-label>
+      </ion-col>
+      <div class="ion-text-start">
+      <ion-col size="2">
+        <ion-label>: 089503349038</ion-label>
+      </ion-col>
+    </div>
+    </ion-row>
+  </div>
+  
+  
+
 </ion-content>
