--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,11 +7,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-card class="ion-text-center">
+    <ion-card-header>
+      <ion-card-title>UPLOAD FOTO</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-button color='primary' shape='round' size='medium' (click)="uploadFoto()">UPLOAD</ion-button>
+    </ion-card-content>
+  </ion-card>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="3" 
+        *ngFor="let iFoto of urlImageStorage; index as position">
+        <ion-label>{{iFoto.name}}</ion-label>
+        <ion-img [src]="iFoto"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
